[package]
name = "reflet-asm"
version = "0.1.0"
edition = "2021"
authors = ["Maxime Bouillot maxbouillot@gmail.com"]
license = "BSD-3-Clause"
description = "A library to make macro-assemblers and a macro assembler for the Reflet architectures build as a reference."

[lib]
name = "macro_asm_builder"
path = "src/macro_asm_builder/macro_asm_builder.rs"

[dependencies]
math-parse = "0.4.0"

[[bin]]
name = "reflet-asm"
path = "src/reflet-asm/main.rs"



