[package]
name = "reflet-asm"
version = "0.1.0"
edition = "2021"
authors = ["Maxime Bouillot maxbouillot@gmail.com"]
license = "BSD-3-Clause"
description = "A macro assembler for the Reflet architectures."

[dependencies]
macro-asm-builder = "0.1.0"

[[bin]]
name = "reflet-asm"
path = "src/main.rs"

