[package]
name = "reflet-asm"
version = "0.1.0"
edition = "2021"
authors = ["Maxime Bouillot maxbouillot@gmail.com"]
license = "BSD-3-Clause"
description = "A macro assembler for the Reflet architectures."

[dependencies]
macro-asm-builder = "1.0.3"

[[bin]]
name = "reflet-asm"
path = "src/main.rs"

